--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Apr 2008; Fabian Groffen <fabian@gentoo.org> package.mask:
+  Mask =sys-apps/net-tools-1.60_p20071202044231
+
   14 Apr 2008; Michael Haubenwallner <haubi@gentoo.org> aix/packages:
   added sys-app/aix-miscutils to aix profiles.
 
