fixed and updated interix profile
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4020882

--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Apr 2008; Markus Duft <mduft@gentoo.org> windows/interix/package.use,
+  windows/interix/profile.bashrc, windows/interix/use.mask:
+  fixed and updated interix profile
+
   16 Apr 2008; Fabian Groffen <fabian@gentoo.org> package.mask:
   Unmask autoconf-2.62, autoconf-wrapper has support for it now
 
