re-formatted 1.0.3 ebuild, added 1.0.4 (Portage version: 2.2.00.9894-prefix/svn/Interix 5.2 unknown)
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4020947

--- a/sys-devel/parity/ChangeLog
+++ b/sys-devel/parity/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*parity-1.0.4 (17 Apr 2008)
+
+  17 Apr 2008; Markus Duft <mduft@gentoo.org> metadata.xml,
+  parity-1.0.3.ebuild, +parity-1.0.4.ebuild:
+  update parity-1.0.3.ebuild formatting, nothing serious. added version 1.0.4
+
 *parity-1.0.3 (04 Feb 2008)
 
   04 Feb 2008; Michael Haubenwallner <haubi@gentoo.org> +., +files,
