--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  17 Apr 2008; Markus Duft <mduft@gentoo.org> -windows/interix/package.use,
+  +windows/interix/package.use.force, +windows/interix/package.use.mask:
+  corrected maskings for interix profiles
+
   16 Apr 2008; Markus Duft <mduft@gentoo.org> windows/interix/package.use,
   windows/interix/profile.bashrc, windows/interix/use.mask:
   fixed and updated interix profile
