Don't do repo check if we don't have svn availble, saves us from an ugly error message during bootstrap. (Portage version: 2.2.00.9894-prefix/svn/Darwin 8.11.0 powerpc)
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4021060

--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,11 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 Apr 2008; Fabian Groffen <grobian@gentoo.org>
+  portage-2.2.00.9894.ebuild:
+  Don't do repo check if we don't have svn availble, saves us from an ugly
+  error message during bootstrap.
+
 *portage-2.2.00.9894 (14 Apr 2008)
 
   14 Apr 2008; Fabian Groffen <grobian@gentoo.org>
