Fix mask entry, as reported by dm-bgp on #gentoo-alt
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4021061

--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  20 Apr 2008; Fabian Groffen <grobian@gentoo.org>
+  darwin/macos/10.5/package.mask:
+  Fix mask entry, as reported by dm-bgp on #gentoo-alt
+
   17 Apr 2008; Markus Duft <mduft@gentoo.org> package.mask:
   masked autoconf 2.62 because it breaks bootstrap of various packages
 
