Drop nls USE-flag mask for wget on 64-bits Solaris, the GCC patches work.
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4021112

--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -3,6 +3,11 @@
 # $Header: $
 
   20 Apr 2008; Fabian Groffen <grobian@gentoo.org>
+  sunos/solaris/5.10/sparc64/package.use.mask,
+  sunos/solaris/5.10/x64/package.use.mask:
+  Drop nls USE-flag mask for wget on 64-bits Solaris, the GCC patches work.
+
+  20 Apr 2008; Fabian Groffen <grobian@gentoo.org>
   darwin/macos/10.5/package.mask:
   Fix mask entry, as reported by dm-bgp on #gentoo-alt
 
