--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.9962 (24 Apr 2008)
+
+  24 Apr 2008; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.9583.ebuild, +portage-2.2.00.9962.ebuild:
+  New snapshot, should contain zmedico's new blocker resultion voodoo, we'll see!
+
   19 Apr 2008; Fabian Groffen <grobian@gentoo.org>
   portage-2.2.00.9894.ebuild:
   Don't do repo check if we don't have svn availble, saves us from an ugly
