--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,11 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  28 Apr 2008; Fabian Groffen <grobian@gentoo.org>
+  darwin/macos/package.use.mask:
+  Mask hipe for dev-lang/erlang, as it is highly experimental on OSX as per
+  upstream.
+
   20 Apr 2008; Fabian Groffen <grobian@gentoo.org>
   sunos/solaris/5.10/sparc64/package.use.mask,
   sunos/solaris/5.10/x64/package.use.mask:
