move dev-lang/erlang:hipe mask to x86-macos only, since on ppc-macos it is fine
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4021312

--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -3,7 +3,8 @@
 # $Header: $
 
   28 Apr 2008; Fabian Groffen <grobian@gentoo.org>
-  darwin/macos/package.use.mask:
+  darwin/macos/10.4/x86/package.use.mask,
+  darwin/macos/10.5/x86/package.use.mask, darwin/macos/package.use.mask:
   Mask hipe for dev-lang/erlang, as it is highly experimental on OSX as per
   upstream.
 
