--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1366 2008/04/27 18:38:33 dertobi123 Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1368 2008/04/28 15:53:05 pva Exp $
+
+  27 Apr 2008; Peter Volkov <pva@gentoo.org> use.local.desc:
+  Changed wording for stardict local USE flags description, bug #217895
+
+  27 Apr 2008; Peter Volkov <pva@gentoo.org> use.local.desc:
+  Added pronounce and qqwry local USE flags for app-dicts/stardict.
 
   27 Apr 2008; Tobias Scherbaum <dertobi123@gentoo.org> use.local.desc:
   Add lighttpd local use flag for nagios-core-3*
