--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 May 2008; Fabian Groffen <grobian@gentoo.org> package.mask:
+  Mask subversion-1.5.0_rc4 as I don't dare to unleash it without testing
+
   28 Apr 2008; Fabian Groffen <grobian@gentoo.org>
   darwin/macos/10.4/x86/package.use.mask,
   darwin/macos/10.5/x86/package.use.mask, darwin/macos/package.use.mask:
