Drop sbcl mask, it's been superceeded by newer versions, and I probably need the version on Darwin
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4021518

--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  05 May 2008; Fabian Groffen <grobian@gentoo.org> package.mask:
+  Drop sbcl mask, it's been superceeded by newer versions, and I probably need
+  the version on Darwin
+
   04 May 2008; Fabian Groffen <grobian@gentoo.org>
   +darwin/macos/10.5/package.use.mask,
   darwin/macos/10.5/x86/package.use.mask:
