Mask tetex entirely, such that e.g. pdfjam doesn't draw in tetex as dependency.
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4021558

--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -3,6 +3,9 @@
 # $Header: $
 
   05 May 2008; Fabian Groffen <grobian@gentoo.org> package.mask:
+  Mask tetex entirely, such that e.g. pdfjam doesn't draw in tetex as dependency.
+
+  05 May 2008; Fabian Groffen <grobian@gentoo.org> package.mask:
   Drop sbcl mask, it's been superceeded by newer versions, and I probably need
   the version on Darwin
 
