sync profiles, moved mduft's mask in ChangeLog to default-prefix/ChangeLog
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4021569

--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 May 2008; Markus Duft <mduft@gentoo.org>
+  default-prefix/windows/interix/package.mask:
+  added masks for clamav and mc for interix
+
   05 May 2008; Fabian Groffen <grobian@gentoo.org> package.mask:
   Mask tetex entirely, such that e.g. pdfjam doesn't draw in tetex as dependency.
 
