--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1384 2008/05/04 12:45:23 kolmodin Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.1386 2008/05/05 13:33:32 vapier Exp $
 
-  06 May 2008; Markus Duft <mduft@gentoo.org>
-  default-prefix/windows/interix/package.mask:
-  added masks for clamav and mc for interix
+  05 May 2008; Mike Frysinger <vapier@gentoo.org> package.mask:
+  Drop libtool-2.2 mask so we can actually find broken packages instead of
+  pretending otherwise.
+
+  04 May 2008; Peter Volkov <pva@gentoo.org> thirdpartymirrors:
+  Added ubuntu mirrors.
 
   04 May 2008; Lennart Kolmodin <kolmodin@gentoo.org> package.mask:
   Rewrite the package masks on the dev-haskell/regex-* packages.
