--- a/sys-apps/aix-miscutils/ChangeLog
+++ b/sys-apps/aix-miscutils/ChangeLog
@@ -2,6 +2,13 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*aix-miscutils-0.1.1629 (06 May 2008)
+
+  06 May 2008; Michael Haubenwallner <haubi@gentoo.org>
+  -aix-miscutils-0.1.1619.ebuild, -aix-miscutils-0.1.1628.ebuild,
+  +aix-miscutils-0.1.1629.ebuild:
+  bumped to aix-miscutils-0.1.1629, dropped old ones.
+
 *aix-miscutils-0.1.1628 (06 May 2008)
 
   06 May 2008; Michael Haubenwallner <haubi@gentoo.org>
