--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 May 2008; Fabian Groffen <grobian@gentoo.org>
+  darwin/macos/package.mask:
+  Mask dev-perl/Net-DNS-0.63, it doesn't compile
+
   06 May 2008; Michael Haubenwallner <haubi@gentoo.org> aix/profile.bashrc:
   always set CONFIG_SHELL to current bash on aix
 
