Mask >=libtool-2.2 since it still breaks several packages among which expat, see bug #220901
--HG--
extra : convert_revision : svn%3Adcf5e38c-c701-0410-9811-92a63bff3de1/trunk%4021667

--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  08 May 2008; Fabian Groffen <grobian@gentoo.org> package.mask:
+  Mask >=libtool-2.2 since it still breaks several packages among which expat,
+  see bug #220901
+
   06 May 2008; Fabian Groffen <grobian@gentoo.org>
   darwin/macos/10.4/package.mask, darwin/macos/package.mask:
   Move Java 1.6 mask to the 10.4 profile, since Apple released 1.6 (and for
@@ -59,10 +63,10 @@
   windows/interix/profile.bashrc, windows/interix/use.mask:
   fixed and updated interix profile
 
-  16 Apr 2008; Fabian Groffen <fabian@gentoo.org> package.mask:
+  16 Apr 2008; Fabian Groffen <grobian@gentoo.org> package.mask:
   Unmask autoconf-2.62, autoconf-wrapper has support for it now
 
-  16 Apr 2008; Fabian Groffen <fabian@gentoo.org> package.mask:
+  16 Apr 2008; Fabian Groffen <grobian@gentoo.org> package.mask:
   Mask =sys-apps/net-tools-1.60_p20071202044231
 
   14 Apr 2008; Michael Haubenwallner <haubi@gentoo.org> aix/packages:
