--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*portage-2.2.00.10249 (08 May 2008)
+
+  08 May 2008; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.9962.ebuild, +portage-2.2.00.10249.ebuild:
+  New snapshot should solve downgrade problems (bug #220689)
+
 *portage-2.2.00.10181 (04 May 2008)
 
   04 May 2008; Fabian Groffen <grobian@gentoo.org>
