--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 May 2008; Michael Haubenwallner <haubi@gentoo.org>
+  +aix/package.use.force:
+  forcing USE=nopie for gcc-3 on aix (would check for ld w/ pie).
+
   08 May 2008; Fabian Groffen <grobian@gentoo.org> package.mask:
   Mask >=libtool-2.2 since it still breaks several packages among which expat,
   see bug #220901
